start init for story

--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -270,6 +270,150 @@
           </div>
         </div>
       </section>
+      <section class="section-testimony py-3 py-lg-5">
+        <div class="container">
+          <h4 class="mb-4 custom-rfs-h4 text-center">Kisah Para Alumni</h4>
+          <div class="row" data-masonry="{&quot;percentPosition&quot;: true }">
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="testimony-card p-3 rounded-3 bg-white">
+                <div class="testimony-header d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center"> 
+                    <div class="pe-2"> 
+                      <div class="testimony-img">
+                        <div class="testimony-initial d-flex align-items-center h-100"><span class="w-100 text-center fs-5 color-primary">Y</span></div>
+                      </div>
+                    </div>
+                    <div> 
+                      <h6 class="m-0">Yoki Putriana</h6>
+                      <div class="fs-7 text-secondary">Desa Sukamuncul, Kec. Sukamaju</div>
+                      <div class="fs-7 text-secondary">Gelombang 50 - 2023</div>
+                    </div>
+                  </div><span class="fs-1"><i class="bi bi-quote"></i></span>
+                </div>
+                <div class="testimony-body mt-3">
+                  <p>Sebelumnya Yoki hanyalah ibu rumah tangga yang tidak memiliki penghasilan.</p>
+                  <p>Dalam pelatihan di Prakerja, Yoki belajar tentang penggunaan rumus dasar, pembuatan tabel, dan analisis data, yang sangat penting untuk pengelolaan keuangan koperasi. Keterampilan ini juga memungkinkannya menjadi Mitra BPS dalam berbagai pekerjaan yang membutuhkan kemampuan komputer. Selain itu, kemampuan bahasa Inggrisnya semakin lancar, terutama saat bertemu dengan WNA, dan membuka peluang usaha baru.</p>
+                  <p>Kini, Yoki <b>#JadiBisa </b>lebih produktif dan berpenghasilan.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="testimony-card p-3 rounded-3 bg-white">
+                <div class="testimony-header d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center"> 
+                    <div class="pe-2"> 
+                      <div class="testimony-img"><img src="../img/alumni-amiruddin.webp" alt="Amiruddin"></div>
+                    </div>
+                    <div> 
+                      <h6 class="m-0">Amiruddin</h6>
+                      <div class="fs-7 text-secondary">Desa Sukamuncul, Kec. Sukamaju</div>
+                      <div class="fs-7 text-secondary">Gelombang 50 - 2023</div>
+                    </div>
+                  </div><span class="fs-1"><i class="bi bi-quote"></i></span>
+                </div>
+                <div class="testimony-body mt-3"> 
+                  <p>Amiruddin memiliki usaha di bidang kuliner khas Aceh.</p>
+                  <p>Di Prakerja, ia mempelajari bagaimana cara memotret makanan. Selain itu, ia juga mempelajari berbagai olahan makanan.</p>
+                  <p>Sejak itu, minatnya terhadap kuliner semakin berkembang. Amiruddin <b>#JadiBisa </b>membagikan ilmu tersebut ke istri, yang sekarang menjalankan usaha gorengan. Keahlian mengambil gambar juga ia gunakan untuk memotret makanan dan memasarkan melalui media sosial.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="testimony-card p-3 rounded-3 bg-white">
+                <div class="testimony-header d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center"> 
+                    <div class="pe-2"> 
+                      <div class="testimony-img">
+                        <div class="testimony-initial d-flex align-items-center h-100"><span class="w-100 text-center fs-5 color-primary">Y</span></div>
+                      </div>
+                    </div>
+                    <div> 
+                      <h6 class="m-0">Yusmarni</h6>
+                      <div class="fs-7 text-secondary">Desa Sukamuncul, Kec. Sukamaju</div>
+                      <div class="fs-7 text-secondary">Gelombang 50 - 2023</div>
+                    </div>
+                  </div><span class="fs-1"><i class="bi bi-quote"></i></span>
+                </div>
+                <div class="testimony-body mt-3"> 
+                  <p>Yusmarni bekerja sebagai tenaga kesehatan di salah satu klinik di Aceh.</p>
+                  <p>Di Prakerja, ia mempelajari bagaimana cara memotret produk dan bagaimana strategi pemasaran produk secara online.</p>
+                  <p>Kini, Yusmarni <b>#JadiBisa </b>memiliki penghasilan tambahan dari jualan online.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="testimony-card p-3 rounded-3 bg-white">
+                <div class="testimony-header d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center"> 
+                    <div class="pe-2"> 
+                      <div class="testimony-img">
+                        <div class="testimony-initial d-flex align-items-center h-100"><span class="w-100 text-center fs-5 color-primary">Y</span></div>
+                      </div>
+                    </div>
+                    <div> 
+                      <h6 class="m-0">Yusmarni</h6>
+                      <div class="fs-7 text-secondary">Desa Sukamuncul, Kec. Sukamaju</div>
+                      <div class="fs-7 text-secondary">Gelombang 50 - 2023</div>
+                    </div>
+                  </div><span class="fs-1"><i class="bi bi-quote"></i></span>
+                </div>
+                <div class="testimony-body mt-3"> 
+                  <p>Yusmarni bekerja sebagai tenaga kesehatan di salah satu klinik di Aceh.</p>
+                  <p>Di Prakerja, ia mempelajari bagaimana cara memotret produk dan bagaimana strategi pemasaran produk secara online.</p>
+                  <p>Kini, Yusmarni <b>#JadiBisa </b>memiliki penghasilan tambahan dari jualan online.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="testimony-card p-3 rounded-3 bg-white">
+                <div class="testimony-header d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center"> 
+                    <div class="pe-2"> 
+                      <div class="testimony-img"><img src="../img/alumni-muhammad.webp" alt="Muhammad"></div>
+                    </div>
+                    <div> 
+                      <h6 class="m-0">Muhammad</h6>
+                      <div class="fs-7 text-secondary">Desa Sukamuncul, Kec. Sukamaju</div>
+                      <div class="fs-7 text-secondary">Gelombang 50 - 2023</div>
+                    </div>
+                  </div><span class="fs-1"><i class="bi bi-quote"></i></span>
+                </div>
+                <div class="testimony-body mt-3"> 
+                  <p>Saat ini Muhammad berprofesi sebagai perawat.</p>
+                  <p>Di Prakerja, ia belajar mengenai penjualan melalui Tiktok dengan tujuan meningkatkan keterampilannya dalam berbisnis.</p>
+                  <p>Kedepannya, Muhammad berencana memiliki usaha online sendiri.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="testimony-card p-3 rounded-3 bg-white">
+                <div class="testimony-header d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center"> 
+                    <div class="pe-2"> 
+                      <div class="testimony-img">
+                        <div class="testimony-initial d-flex align-items-center h-100"><span class="w-100 text-center fs-5 color-primary">H</span></div>
+                      </div>
+                    </div>
+                    <div> 
+                      <h6 class="m-0">Helmi Suardi</h6>
+                      <div class="fs-7 text-secondary">Desa Sukamuncul, Kec. Sukamaju</div>
+                      <div class="fs-7 text-secondary">Gelombang 50 - 2023</div>
+                    </div>
+                  </div><span class="fs-1"><i class="bi bi-quote"></i></span>
+                </div>
+                <div class="testimony-body mt-3"> 
+                  <p>Sebelumnya, Helmi merupakan seorang fresh graduate S2 Developmental and Educational Psychology dari Huazhong University of Science and Technology, China yang memiliki hobi fotografi.</p>
+                  <p>Di Prakerja, ia mempelajari teknik pencahayaan, komposisi dasar fotografi dan bagaimana cara menjadi fotografer profesional.</p>
+                  <p>Kini, Hemi <b>#JadiBisa </b>percaya diri dengan memiliki 4 profesi sekaligus yaitu dosen, petani sawit, fotografer dan penerjemah bahasa mandarin.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row d-flex justify-content-center">
+            <button class="btn btn-outline-primary btn-lg w-auto">Lihat Lebih Banyak</button>
+          </div>
+        </div>
+      </section>
     </main><!-- Footer start -->
     <footer class="section-footer">
       <div class="top-wrapper">
