--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -270,6 +270,100 @@
           </div>
         </div>
       </section>
+      <section class="section-testimony py-3 py-lg-5">
+        <div class="container">
+          <h4 class="mb-4 custom-rfs-h4 text-center">Kisah Para Alumni</h4>
+          <div class="row" id="data-story">
+            <div class="col-lg-4 col-md-6 mb-4 list-story">
+              <div class="testimony-card p-3 rounded-3 bg-white">
+                <div class="testimony-header d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center"> 
+                    <div class="pe-2"> 
+                      <div class="testimony-img">
+                        <div class="testimony-initial d-flex align-items-center h-100 skeleton-box"><span class="w-100 text-center fs-5 color-primary"> </span></div>
+                      </div>
+                    </div>
+                    <div> 
+                      <h6 class="m-0 skeleton-box rounded-pill" style="width:180px;height: 18px;"></h6>
+                      <div class="fs-7 text-secondary skeleton-box rounded-pill" style="width:200px;height: 12px;"></div>
+                      <div class="fs-7 text-secondary skeleton-box rounded-pill" style="width:150px;height: 12px;"></div>
+                    </div>
+                  </div><span class="fs-1"><i class="bi bi-quote"></i></span>
+                </div>
+                <div class="testimony-body mt-3"> 
+                  <p class="skeleton-box rounded-pill mb-1" style="width:100%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:90%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill" style="width:60%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:100%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:90%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill" style="width:60%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:100%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:90%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill" style="width:60%;height: 12px;"></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="testimony-card p-3 rounded-3 bg-white">
+                <div class="testimony-header d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center"> 
+                    <div class="pe-2"> 
+                      <div class="testimony-img">
+                        <div class="testimony-initial d-flex align-items-center h-100 skeleton-box"><span class="w-100 text-center fs-5 color-primary"> </span></div>
+                      </div>
+                    </div>
+                    <div> 
+                      <h6 class="m-0 skeleton-box rounded-pill" style="width:180px;height: 18px;"></h6>
+                      <div class="fs-7 text-secondary skeleton-box rounded-pill" style="width:200px;height: 12px;"></div>
+                      <div class="fs-7 text-secondary skeleton-box rounded-pill" style="width:150px;height: 12px;"></div>
+                    </div>
+                  </div><span class="fs-1"><i class="bi bi-quote"></i></span>
+                </div>
+                <div class="testimony-body mt-3"> 
+                  <p class="skeleton-box rounded-pill mb-1" style="width:100%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:90%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill" style="width:60%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:100%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:90%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill" style="width:60%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:100%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:90%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill" style="width:60%;height: 12px;"></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+              <div class="testimony-card p-3 rounded-3 bg-white">
+                <div class="testimony-header d-flex justify-content-between align-items-center">
+                  <div class="d-flex align-items-center"> 
+                    <div class="pe-2"> 
+                      <div class="testimony-img">
+                        <div class="testimony-initial d-flex align-items-center h-100 skeleton-box"><span class="w-100 text-center fs-5 color-primary"> </span></div>
+                      </div>
+                    </div>
+                    <div> 
+                      <h6 class="m-0 skeleton-box rounded-pill" style="width:180px;height: 18px;"></h6>
+                      <div class="fs-7 text-secondary skeleton-box rounded-pill" style="width:200px;height: 12px;"></div>
+                      <div class="fs-7 text-secondary skeleton-box rounded-pill" style="width:150px;height: 12px;"></div>
+                    </div>
+                  </div><span class="fs-1"><i class="bi bi-quote"></i></span>
+                </div>
+                <div class="testimony-body mt-3"> 
+                  <p class="skeleton-box rounded-pill mb-1" style="width:100%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:90%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill" style="width:60%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:100%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:90%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill" style="width:60%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:100%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill mb-1" style="width:90%;height: 12px;"></p>
+                  <p class="skeleton-box rounded-pill" style="width:60%;height: 12px;"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- Footer start -->
     <footer class="section-footer">
       <div class="top-wrapper">
