update map format to hide the label when overlap

--- a/html/kabupaten/section_main_content.html
+++ b/html/kabupaten/section_main_content.html
@@ -15,8 +15,7 @@
               <div class="col-lg-4 bg-s200 p-4">
                 <div>
                   <div class="regency-name h6">Kabupaten</div>
-                  <h1 class="city-name text-capitalize">Memuat Data </h1>
-                  <div class="province-name h6 text-secondary">Memuat Data</div>
+                  <h1 class="city-name text-capitalize">Memuat Data </h1><b class="province-name h5 text-secondary">Memuat Data</b>
                 </div>
                 <hr/>
                 <div class="d-flex">
@@ -30,7 +29,7 @@
                   </div>
                 </div>
                 <p class="fs-7 mt-3 narasi">
-                   Sebanyak <span class="fw-bold" id="total-recipient">0 </span> orang dari <span class="fw-bold" id="total-workers">0 </span> angkatan kerja di Provinsi <span class="province-name text-capitalize fw-bold">~  </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data <i>BPS per Februari 2024</i>.</p>
+                   Sebanyak <span class="fw-bold" id="total-recipient">0 </span> orang dari <span class="fw-bold" id="total-workers">0 </span> angkatan kerja di  <span class="province-name text-capitalize fw-bold">~  </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data <i>BPS per Februari 2024</i>.</p>
               </div>
             </div>
           </div>
