update city name for regency

--- a/kabupaten/index.html
+++ b/kabupaten/index.html
@@ -105,7 +105,7 @@
                 </div>
               </div>
               <p class="fs-7 mt-3 narasi">
-                 Sebanyak <span class="fw-bold" id="total-recipient">0 </span> orang dari <span class="fw-bold" id="total-workers">0 </span> angkatan kerja di  <span class="province-name text-capitalize fw-bold">~  </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data <i>BPS per Februari 2024</i>.</p>
+                 Sebanyak <span class="fw-bold" id="total-recipient">0 </span> orang dari <span class="fw-bold" id="total-workers">0 </span> angkatan kerja di  <span class="city-name text-capitalize fw-bold">~  </span> pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data <i>BPS per Februari 2024</i>.</p>
             </div>
           </div>
         </div>
